<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/px35"
        android:text="@string/multi_parameter_monitor"
        android:textSize="@dimen/px30" />

    <com.zhy.autolayout.AutoFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.returnlive.dashubiohd.view.CardiographView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.returnlive.dashubiohd.view.EcgPathOne
                android:id="@+id/ecg_path"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layerType="software"/>

            <com.returnlive.dashubiohd.view.EcgPathSecond
                android:id="@+id/ecg_path_second"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layerType="software"/>


        </com.zhy.autolayout.AutoLinearLayout>




    </com.zhy.autolayout.AutoFrameLayout>


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:text="@string/heart_rate_colon"
            android:textSize="@dimen/px25" />

        <TextView
            android:id="@+id/tv_heart_rate_colon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:textSize="@dimen/px25" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:text="@string/pulse"
            android:textSize="@dimen/px25" />

        <TextView
            android:id="@+id/tv_pulse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:textSize="@dimen/px25" />

    </com.zhy.autolayout.AutoLinearLayout>


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:text="@string/systolic_blood_pressure_difference"
            android:textSize="@dimen/px25" />

        <TextView
            android:id="@+id/tv_systolic_blood_pressure_difference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:textSize="@dimen/px25" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:text="@string/systolic_blood_pressure"
            android:textSize="@dimen/px25" />

        <TextView
            android:id="@+id/tv_systolic_blood_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:textSize="@dimen/px25" />

    </com.zhy.autolayout.AutoLinearLayout>


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:text="@string/diastolic_blood_pressure"
            android:textSize="@dimen/px25" />

        <TextView
            android:id="@+id/tv_diastolic_blood_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:textSize="@dimen/px25" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:text="@string/the_average_pressure"
            android:textSize="@dimen/px25" />

        <TextView
            android:id="@+id/tv_the_average_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:textSize="@dimen/px25" />

    </com.zhy.autolayout.AutoLinearLayout>


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:text="@string/oxygen"
            android:textSize="@dimen/px25" />

        <TextView
            android:id="@+id/tv_oxygen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:textSize="@dimen/px25" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:text="@string/breathing_rate"
            android:textSize="@dimen/px25" />

        <TextView
            android:id="@+id/tv_breathing_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:textSize="@dimen/px25" />

    </com.zhy.autolayout.AutoLinearLayout>


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:text="@string/ST_segment_numerical"
            android:textSize="@dimen/px25" />

        <TextView
            android:id="@+id/tv_st_segment_numerical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:padding="@dimen/px25"
            android:textSize="@dimen/px25" />

    </com.zhy.autolayout.AutoLinearLayout>

    <View style="@style/ViewLineStyle" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sel_btn_white"
            android:text="@string/cancel"
            android:textSize="@dimen/px30" />

        <View
            android:layout_width="@dimen/px01"
            android:layout_height="match_parent"
            android:background="@color/line_color" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sel_btn_white"
            android:text="@string/save"
            android:textSize="@dimen/px30" />

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>